Change "Preload Frames" option into "Max Sample RAM"

--- a/locales/ca.yaml
+++ b/locales/ca.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Guany:"
   group_polyphony: "Polifonia:"
   group_buffer: "Búfer d'Àudio (marcs):"
-  group_preload: "Precàrrega (marcs):"
+  group_preload: "RAM màxima per a mostres (GB):"
   group_options: "Opcions:"
   
   tooltip_organ: "Selecciona el fitxer d'orgue Hauptwerk (.organ o Organ_Hauptwerk_xml) per carregar."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Volum general de sortida."
   tooltip_polyphony: "Nombre màxim de veus simultànies."
   tooltip_buffer: "Nombre de marcs d'àudio per búfer. Valors més alts redueixen talls però augmenten la latència."
-  tooltip_preload: "Els primers marcs de cada mostra es precarregaran a la RAM."
+  tooltip_preload: "RAM màxima per precarregar mostres (en GB). Valors més alts donen al disc més temps per transmetre la resta de dades, però això també utilitza més RAM. Augmenta aquest valor si tens un SSD més lent."
   tooltip_precache: "Activa això per carregar completament totes les mostres a la RAM en lloc de reproduir-les des del disc."
   tooltip_convert: "Activa això per convertir totes les mostres a 16 bits (estalvi de RAM)."
   tooltip_tuning: "Utilitza l'afinació original de les mostres."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Guany:            %{val}"
   fmt_poly:        "Polifonia:        %{val}"
   fmt_buffer:      "Búfer Àudio:      %{val} marcs"
-  fmt_preload:     "Precàrrega:       %{val} marcs"
+  fmt_preload:     "RAM màx. mostres: %{val} GB"
   fmt_precache:    "Pre-caché:        %{val}"
   fmt_convert:     "Conv. 16-bit:     %{val}"
   fmt_tuning:      "Afinació Orig.:   %{val}"
