--- a/locales/cs.yaml
+++ b/locales/cs.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Zisk (Gain):"
   group_polyphony: "Polyfonie:"
   group_buffer: "Audio buffer (snímky):"
-  group_preload: "Přednačtení (snímky):"
+  group_preload: "Max. RAM pro vzorky (GB):"
   group_options: "Možnosti:"
   
   tooltip_organ: "Vyberte soubor varhan Hauptwerk (.organ nebo Organ_Hauptwerk_xml) k načtení."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Celková výstupní hlasitost."
   tooltip_polyphony: "Maximální počet současně znějících hlasů."
   tooltip_buffer: "Počet audio snímků na buffer. Vyšší hodnoty snižují výpadky, ale zvyšují latenci."
-  tooltip_preload: "Prvních pár snímků každého samplu se přednačte do RAM."
+  tooltip_preload: "Maximální RAM pro přednačítání vzorků (v GB). Vyšší hodnoty poskytují disku více času na streamování zbývajících dat, ale spotřebují více RAM. Tuto hodnotu zvyšte, pokud máte pomalejší SSD."
   tooltip_precache: "Povolte toto pro kompletní načtení všech samplů do RAM místo streamování z disku."
   tooltip_convert: "Povolte toto pro konverzi všech samplů na 16 bitů (úspora RAM)."
   tooltip_tuning: "Použít původní ladění samplů."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Zisk:             %{val}"
   fmt_poly:        "Polyfonie:        %{val}"
   fmt_buffer:      "Audio buffer:     %{val} snímků"
-  fmt_preload:     "Přednačtení:      %{val} snímků"
+  fmt_preload:     "Max. RAM vzorků:  %{val} GB"
   fmt_precache:    "RAM Cache:        %{val}"
   fmt_convert:     "Konv. na 16-bit:  %{val}"
   fmt_tuning:      "Původní ladění:   %{val}"
