--- a/locales/da.yaml
+++ b/locales/da.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Gain:"
   group_polyphony: "Polyfoni:"
   group_buffer: "Lydbuffer (frames):"
-  group_preload: "Forindlæsning (frames):"
+  group_preload: "Maks. RAM til samples (GB):"
   group_options: "Indstillinger:"
   
   tooltip_organ: "Vælg Hauptwerk-orgelfilen (.organ eller Organ_Hauptwerk_xml), der skal indlæses."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Overordnet udgangslydstyrke."
   tooltip_polyphony: "Maksimalt antal samtidige stemmer."
   tooltip_buffer: "Antal lydframes per buffer. Højere værdier mindsker risiko for udfald men øger latenstid."
-  tooltip_preload: "De første frames af hver sample forindlæses i RAM."
+  tooltip_preload: "Maksimal RAM til forindlæsning af samples (i GB). Højere værdier giver din disk mere tid til at streame de resterende sampledata, men dette bruger også mere RAM. Øg denne værdi, hvis du har en langsommere SSD."
   tooltip_precache: "Aktiver dette for at indlæse alle samples helt i RAM i stedet for at streame fra disk."
   tooltip_convert: "Aktiver dette for at konvertere alle samples til 16-bit."
   tooltip_tuning: "Brug original stemning fra samples."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Gain:             %{val}"
   fmt_poly:        "Polyfoni:         %{val}"
   fmt_buffer:      "Lydbuffer:        %{val} frames"
-  fmt_preload:     "Forindlæsning:    %{val} frames"
+  fmt_preload:     "Maks. sample-RAM: %{val} GB"
   fmt_precache:    "Pre-cache:        %{val}"
   fmt_convert:     "Konv. til 16-bit: %{val}"
   fmt_tuning:      "Orig. Stemming:   %{val}"
