--- a/locales/de.yaml
+++ b/locales/de.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Gain (Verstärkung):"
   group_polyphony: "Polyphonie:"
   group_buffer: "Audio-Puffer (Frames):"
-  group_preload: "Vorladen (Frames):"
+  group_preload: "Max. RAM für Samples (GB):"
   group_options: "Optionen:"
   
   tooltip_organ: "Wählen Sie die Hauptwerk-Orgeldatei (.organ oder Organ_Hauptwerk_xml) zum Laden aus."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Gesamtlautstärke. Passen Sie dies an, um Übersteuerung zu vermeiden."
   tooltip_polyphony: "Maximale Anzahl gleichzeitiger Stimmen."
   tooltip_buffer: "Anzahl der Audio-Frames pro Puffer. Höhere Werte verringern Aussetzer, erhöhen aber die Latenz."
-  tooltip_preload: "Die ersten Frames jedes Samples werden in den RAM vorgeladen."
+  tooltip_preload: "Maximales RAM für das Vorladen von Samples (in GB). Höhere Werte geben der Festplatte mehr Zeit, die restlichen Sample-Daten zu streamen, verbrauchen aber auch mehr RAM. Erhöhen Sie diesen Wert bei einer langsameren SSD."
   tooltip_precache: "Aktivieren, um alle Samples vollständig in den RAM zu laden, anstatt sie von der Festplatte zu streamen."
   tooltip_convert: "Aktivieren, um alle Samples in 16-Bit umzuwandeln (spart RAM)."
   tooltip_tuning: "Verwendet die Originalstimmung der Samples."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Gain:             %{val}"
   fmt_poly:        "Polyphonie:       %{val}"
   fmt_buffer:      "Audio-Puffer:     %{val} Frames"
-  fmt_preload:     "Vorladen:         %{val} Frames"
+  fmt_preload:     "Max. Sample-RAM:  %{val} GB"
   fmt_precache:    "RAM-Cache:        %{val}"
   fmt_convert:     "16-Bit Konv.:     %{val}"
   fmt_tuning:      "Orig. Stimmung:   %{val}"
