--- a/locales/eo.yaml
+++ b/locales/eo.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Gajno:"
   group_polyphony: "Polifonio:"
   group_buffer: "Aŭd-Bufro (kadroj):"
-  group_preload: "Antaŭŝarĝo (kadroj):"
+  group_preload: "Maksimuma RAM por specimenoj (GB):"
   group_options: "Opcioj:"
   
   tooltip_organ: "Elektu la Hauptwerk-orgenan dosieron (.organ aŭ Organ_Hauptwerk_xml) por ŝarĝi."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Ĝenerala eliga laŭteco."
   tooltip_polyphony: "Maksimuma nombro de samtempaj voĉoj."
   tooltip_buffer: "Nombro de aŭd-kadroj por bufro. Pli altaj valoroj reduktas problemojn sed pliigas latentecon."
-  tooltip_preload: "La unuaj kadroj de ĉiu specimeno estos antaŭŝarĝitaj en RAM."
+  tooltip_preload: "Maksimuma RAM por antaŭŝargi specimenojn (en GB). Pli altaj valoroj donas al via disko pli da tempo por elsendi la ceterajn specimenajn datumojn, sed tio ankaŭ uzas pli da RAM. Pliigu ĉi tiun valoron se vi havas pli malrapidan SSD."
   tooltip_precache: "Ebligu ĉi tion por plene ŝarĝi ĉiujn specimenojn en RAM anstataŭ elsendi ilin de disko."
   tooltip_convert: "Ebligu ĉi tion por konverti ĉiujn specimenojn al 16-bita (ŝparas RAM)."
   tooltip_tuning: "Uzu la originalan agordon de la specimenoj."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Gajno:            %{val}"
   fmt_poly:        "Polifonio:        %{val}"
   fmt_buffer:      "Aŭd-Bufro:        %{val} kadroj"
-  fmt_preload:     "Antaŭŝarĝo:       %{val} kadroj"
+  fmt_preload:     "Maks. spec. RAM:  %{val} GB"
   fmt_precache:    "Antaŭ-kaŝmemoro:  %{val}"
   fmt_convert:     "Konv. al 16-bita: %{val}"
   fmt_tuning:      "Orig. Agordo:     %{val}"
