--- a/locales/es.yaml
+++ b/locales/es.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Ganancia:"
   group_polyphony: "Polifonía:"
   group_buffer: "Búfer de Audio (frames):"
-  group_preload: "Pre-carga de Frames:"
+  group_preload: "RAM máx. para muestras (GB):"
   group_options: "Opciones:"
 
   tooltip_organ: "Selecciona el archivo de órgano Hauptwerk (.organ o Organ_Hauptwerk_xml) para cargar."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Volumen general de salida. Ajústalo para evitar distorsión o aumentar el volumen."
   tooltip_polyphony: "Número máximo de voces simultáneas."
   tooltip_buffer: "Número de frames de audio por búfer. Valores más altos reducen cortes pero aumentan la latencia."
-  tooltip_preload: "Los primeros frames de cada muestra se precargarán en RAM. Aumenta este valor si tienes un SSD lento."
+  tooltip_preload: "RAM máxima para precargar muestras (en GB). Valores más altos dan al disco más tiempo para transmitir el resto de datos de la muestra, pero también usan más RAM. Aumente este valor si tiene un SSD más lento."
   tooltip_precache: "Activa esto para cargar completamente todas las muestras en RAM."
   tooltip_convert: "Activa esto para convertir todas las muestras a 16 bits (menos uso de RAM)."
   tooltip_tuning: "Usa la afinación original de las muestras si no difieren por más de 20 cents."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Ganancia:         %{val}"
   fmt_poly:        "Polifonía:        %{val}"
   fmt_buffer:      "Búfer Audio:      %{val} frames"
-  fmt_preload:     "Pre-carga Frames: %{val} frames"
+  fmt_preload:     "RAM máx. muestras:%{val} GB"
   fmt_precache:    "Pre-caché:        %{val}"
   fmt_convert:     "Conv. a 16-bit:   %{val}"
   fmt_tuning:      "Afinación Orig.:  %{val}"
