--- a/locales/fi.yaml
+++ b/locales/fi.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Vahvistus (Gain):"
   group_polyphony: "Polyfonia:"
   group_buffer: "Äänipuskuri (kehykset):"
-  group_preload: "Esilataus (kehykset):"
+  group_preload: "Näytteiden enimmäis-RAM (GB):"
   group_options: "Asetukset:"
   
   tooltip_organ: "Valitse ladattava Hauptwerk-urkutiedosto (.organ tai Organ_Hauptwerk_xml)."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Yleinen lähtövoimakkuus."
   tooltip_polyphony: "Samanaikaisten äänten enimmäismäärä."
   tooltip_buffer: "Äänikehysten määrä puskuria kohden. Korkeammat arvot vähentävät pätkimistä mutta lisäävät viivettä."
-  tooltip_preload: "Kunkin samplen ensimmäiset kehykset esiladataan RAM-muistiin."
+  tooltip_preload: "RAM-muistin enimmäismäärä näytteiden esilataukseen (GB). Suuremmat arvot antavat levylle enemmän aikaa suoratoistaa loput näytetiedot, mutta tämä vie myös enemmän RAM-muistia. Suurenna arvoa, jos sinulla on hitaampi SSD."
   tooltip_precache: "Ota tämä käyttöön ladataksesi kaikki samplet kokonaan RAM-muistiin levyltä suoratoiston sijaan."
   tooltip_convert: "Ota tämä käyttöön muuntaaksesi kaikki samplet 16-bittisiksi (säästää RAM-muistia)."
   tooltip_tuning: "Käytä samplejen alkuperäistä viritystä."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Vahvistus:        %{val}"
   fmt_poly:        "Polyfonia:        %{val}"
   fmt_buffer:      "Äänipuskuri:      %{val} kehystä"
-  fmt_preload:     "Esilataus:        %{val} kehystä"
+  fmt_preload:     "Näytteiden RAM:   %{val} GB"
   fmt_precache:    "Välimuisti RAM:   %{val}"
   fmt_convert:     "Muunna 16-bit:    %{val}"
   fmt_tuning:      "Orig. viritys:    %{val}"
