--- a/locales/fr.yaml
+++ b/locales/fr.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Gain:"
   group_polyphony: "Polyphonie:"
   group_buffer: "Tampon Audio (frames):"
-  group_preload: "Préchargement Frames:"
+  group_preload: "RAM max pour échantillons (Go) :"
   group_options: "Options:"
   
   tooltip_organ: "Sélectionnez le fichier d'orgue Hauptwerk (.organ ou Organ_Hauptwerk_xml) à charger."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Volume de sortie global."
   tooltip_polyphony: "Nombre maximum de voix simultanées."
   tooltip_buffer: "Nombre de frames audio par tampon. Des valeurs élevées augmentent la latence."
-  tooltip_preload: "Les premières frames de chaque échantillon seront préchargées en RAM."
+  tooltip_preload: "RAM maximale pour le préchargement des échantillons (en Go). Des valeurs plus élevées donnent plus de temps au disque pour lire le reste des données, mais cela utilise aussi plus de RAM. Augmentez cette valeur si vous avez un SSD plus lent."
   tooltip_precache: "Activez ceci pour charger complètement tous les échantillons en RAM."
   tooltip_convert: "Activez ceci pour convertir tous les échantillons en 16 bits."
   tooltip_tuning: "Utiliser l'accordage original des échantillons."
@@ -192,20 +192,20 @@ tui_config:
   prompt_preload: "Entrez Frames de Préchargement"
   prompt_generic: "Entrez Valeur"
 
-  fmt_organ:       "Fichier Orgue:    %{val}"
-  fmt_audio:       "Périph. Audio:    %{val}"
-  fmt_rate:        "Taux Échantillon: %{val} Hz"
-  fmt_midi_devs:   "Entrées MIDI:     %{count} activés"
-  fmt_midi_file:   "Fichier MIDI:     %{val}"
-  fmt_ir:          "Fichier IR Réverb:%{val}"
-  fmt_mix:         "Mix Réverb:       %{val}"
-  fmt_gain:        "Gain:             %{val}"
-  fmt_poly:        "Polyphonie:       %{val}"
-  fmt_buffer:      "Tampon Audio:     %{val} frames"
-  fmt_preload:     "Précharge Frames: %{val} frames"
-  fmt_precache:    "Pré-cache:        %{val}"
-  fmt_convert:     "Conv. en 16-bit:  %{val}"
-  fmt_tuning:      "Accordage Orig.:  %{val}"
+  fmt_organ:       "Fichier Orgue:       %{val}"
+  fmt_audio:       "Périph. Audio:       %{val}"
+  fmt_rate:        "Taux Échantillon:    %{val} Hz"
+  fmt_midi_devs:   "Entrées MIDI:        %{count} activés"
+  fmt_midi_file:   "Fichier MIDI:        %{val}"
+  fmt_ir:          "Fichier IR Réverb:   %{val}"
+  fmt_mix:         "Mix Réverb:          %{val}"
+  fmt_gain:        "Gain:                %{val}"
+  fmt_poly:        "Polyphonie:          %{val}"
+  fmt_buffer:      "Tampon Audio:        %{val} frames"
+  fmt_preload:     "RAM max échantillons:%{val} Go"
+  fmt_precache:    "Pré-cache:           %{val}"
+  fmt_convert:     "Conv. en 16-bit:     %{val}"
+  fmt_tuning:      "Accordage Orig.:     %{val}"
   
   val_on: "ON"
   val_off: "OFF"
