--- a/locales/ga.yaml
+++ b/locales/ga.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Gnóthachan:"
   group_polyphony: "Polafónacht:"
   group_buffer: "Maolán Fuaime (frámaí):"
-  group_preload: "Réamh-luchtú (frámaí):"
+  group_preload: "RAM Uasta le haghaidh Samplaí (GB):"
   group_options: "Roghanna:"
   
   tooltip_organ: "Roghnaigh an comhad orgáin Hauptwerk (.organ nó Organ_Hauptwerk_xml) le luchtú."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Toirt aschuir iomlán."
   tooltip_polyphony: "Uasmhéid guthanna comhuaineacha."
   tooltip_buffer: "Líon na bhfrámaí fuaime in aghaidh an mhaoláin. Laghdaíonn luachanna níos airde glitches ach méadaíonn siad aga moille."
-  tooltip_preload: "Déanfar na chéad chúpla fráma de gach sampla a réamh-luchtú isteach sa RAM."
+  tooltip_preload: "An méid uasta RAM le húsáid chun samplaí a réamhlódáil (i GB). Tugann luachanna níos airde níos mó ama do do dhiosca chun na sonraí samplacha atá fágtha a shruthú, ach úsáideann sé seo níos mó RAM freisin. Méadaigh an luach seo má tá SSD níos moille agat."
   tooltip_precache: "Cumasaigh é seo chun gach sampla a luchtú go hiomlán isteach sa RAM in áit iad a shruthú ón diosca."
   tooltip_convert: "Cumasaigh é seo chun gach sampla a thiontú go 16-giotán (spárálann RAM)."
   tooltip_tuning: "Bain úsáid as tiúnadh bunaidh na samplaí."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Gnóthachan:       %{val}"
   fmt_poly:        "Polafónacht:      %{val}"
   fmt_buffer:      "Maolán Fuaime:    %{val} fráma"
-  fmt_preload:     "Réamh-luchtú:     %{val} fráma"
+  fmt_preload:     "Uas-RAM Samplaí:  %{val} GB"
   fmt_precache:    "Réamh-thaisce:    %{val}"
   fmt_convert:     "Tiont. go 16-giot:%{val}"
   fmt_tuning:      "Tiúnadh Bunaidh:  %{val}"
