--- a/locales/gd.yaml
+++ b/locales/gd.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Meudachadh:"
   group_polyphony: "Polafonaidh:"
   group_buffer: "Bufair Fuaime (frèamaichean):"
-  group_preload: "Ro-luchdachadh (frèamaichean):"
+  group_preload: "RAM as motha airson sampaill (GB):"
   group_options: "Roghainnean:"
   
   tooltip_organ: "Tagh am faidhle oargan Hauptwerk (.organ no Organ_Hauptwerk_xml) ri luchdachadh."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Meud iomlan na fuaime."
   tooltip_polyphony: "An àireamh as motha de ghuthan aig an aon àm."
   tooltip_buffer: "Àireamh de fhrèamaichean fuaime gach bufair. Lughdaichidh luachan àirde glitichean ach meudaichidh iad dàil."
-  tooltip_preload: "Thèid na ciad fhrèamaichean de gach sampall a ro-luchdachadh gu RAM."
+  tooltip_preload: "An RAM as motha airson sampaill a ro-luchdachadh (ann an GB). Bheir luachan nas àirde barrachd ùine don diosc agad airson an còrr den dàta sampaill a shruthadh, ach cleachdaidh seo barrachd RAM cuideachd. Meudaich an luach seo ma tha SSD nas slaodaiche agad."
   tooltip_precache: "Cuir seo an comas gus gach sampall a luchdachadh gu tur gu RAM an àite a bhith gan sruthadh bhon diosg."
   tooltip_convert: "Cuir seo an comas gus gach sampall a thionndadh gu 16-bit (sàbhaladh RAM)."
   tooltip_tuning: "Cleachd gleusadh tùsail nan sampaill."
@@ -192,20 +192,20 @@ tui_config:
   prompt_preload: "Cuir a-steach Frèamaichean Ro-luchdachadh"
   prompt_generic: "Cuir a-steach Luach"
 
-  fmt_organ:       "Faidhle Oargain:  %{val}"
-  fmt_audio:       "Uidheam Fuaime:   %{val}"
-  fmt_rate:        "Reat Samplachaidh:%{val} Hz"
-  fmt_midi_devs:   "Ion-chuir MIDI:   %{count} an comas"
-  fmt_midi_file:   "Faidhle MIDI:     %{val}"
-  fmt_ir:          "Faidhle IR:       %{val}"
-  fmt_mix:         "Measgachadh:      %{val}"
-  fmt_gain:        "Meudachadh:       %{val}"
-  fmt_poly:        "Polafonaidh:      %{val}"
-  fmt_buffer:      "Bufair Fuaime:    %{val} frèamaichean"
-  fmt_preload:     "Ro-luchdachadh:   %{val} frèamaichean"
-  fmt_precache:    "Ro-tasgadan:      %{val}"
-  fmt_convert:     "Tionnd. gu 16-bit:%{val}"
-  fmt_tuning:      "Gleusadh Tùsail:  %{val}"
+  fmt_organ:       "Faidhle Oargain:      %{val}"
+  fmt_audio:       "Uidheam Fuaime:       %{val}"
+  fmt_rate:        "Reat Samplachaidh:    %{val} Hz"
+  fmt_midi_devs:   "Ion-chuir MIDI:       %{count} an comas"
+  fmt_midi_file:   "Faidhle MIDI:         %{val}"
+  fmt_ir:          "Faidhle IR:           %{val}"
+  fmt_mix:         "Measgachadh:          %{val}"
+  fmt_gain:        "Meudachadh:           %{val}"
+  fmt_poly:        "Polafonaidh:          %{val}"
+  fmt_buffer:      "Bufair Fuaime:        %{val} frèamaichean"
+  fmt_preload:     "RAM sampaill as motha:%{val} GB"
+  fmt_precache:    "Ro-tasgadan:          %{val}"
+  fmt_convert:     "Tionnd. gu 16-bit:    %{val}"
+  fmt_tuning:      "Gleusadh Tùsail:      %{val}"
   
   val_on: "AIR"
   val_off: "DHETH"
