--- a/locales/hu.yaml
+++ b/locales/hu.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Erősítés (Gain):"
   group_polyphony: "Polifónia:"
   group_buffer: "Audio Puffer (képkocka):"
-  group_preload: "Előtöltés (képkocka):"
+  group_preload: "Max. RAM a mintákhoz (GB):"
   group_options: "Beállítások:"
   
   tooltip_organ: "Válassza ki a betöltendő Hauptwerk orgonafájlt (.organ vagy Organ_Hauptwerk_xml)."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Általános kimeneti hangerő."
   tooltip_polyphony: "Az egyidejűleg megszólaló hangok maximális száma."
   tooltip_buffer: "Audio képkockák száma pufferenként. A magasabb értékek csökkentik a hibákat, de növelik a késleltetést."
-  tooltip_preload: "Minden minta első néhány képkockája előre betöltődik a RAM-ba."
+  tooltip_preload: "A minták előtöltéséhez használt maximális RAM (GB-ban). A magasabb értékek több időt hagynak a lemeznek a maradék mintaadatok streamelésére, de ez több RAM-ot is használ. Növelje ezt az értéket, ha lassabb SSD-je van."
   tooltip_precache: "Engedélyezze ezt az összes minta teljes betöltéséhez a RAM-ba (lemezről olvasás helyett)."
   tooltip_convert: "Engedélyezze ezt az összes minta 16 bitesre konvertálásához (RAM megtakarítás)."
   tooltip_tuning: "A minták eredeti hangolásának használata."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Erősítés:         %{val}"
   fmt_poly:        "Polifónia:        %{val}"
   fmt_buffer:      "Audio Puffer:     %{val} képkocka"
-  fmt_preload:     "Előtöltés:        %{val} képkocka"
+  fmt_preload:     "Max. minta RAM:   %{val} GB"
   fmt_precache:    "Gyorsítótár:      %{val}"
   fmt_convert:     "16 bitre konv.:   %{val}"
   fmt_tuning:      "Eredeti Hangolás: %{val}"
