--- a/locales/id.yaml
+++ b/locales/id.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Gain:"
   group_polyphony: "Polifoni:"
   group_buffer: "Buffer Audio (frame):"
-  group_preload: "Preload (frame):"
+  group_preload: "RAM Maks untuk Sampel (GB):"
   group_options: "Opsi:"
   
   tooltip_organ: "Pilih file organ Hauptwerk (.organ atau Organ_Hauptwerk_xml) untuk dimuat."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Volume output keseluruhan."
   tooltip_polyphony: "Jumlah suara simultan maksimum."
   tooltip_buffer: "Jumlah frame audio per buffer. Nilai yang lebih tinggi mengurangi gangguan tetapi meningkatkan latensi."
-  tooltip_preload: "Beberapa frame pertama dari setiap sampel akan dimuat sebelumnya ke RAM."
+  tooltip_preload: "RAM maksimum untuk memuat awal sampel (dalam GB). Nilai yang lebih tinggi memberi disk Anda lebih banyak waktu untuk mengalirkan sisa data sampel, tetapi ini juga menggunakan lebih banyak RAM. Tingkatkan nilai ini jika Anda memiliki SSD yang lebih lambat."
   tooltip_precache: "Aktifkan ini untuk memuat semua sampel sepenuhnya ke RAM alih-alih streaming dari disk."
   tooltip_convert: "Aktifkan ini untuk mengonversi semua sampel ke 16-bit (hemat RAM)."
   tooltip_tuning: "Gunakan penyetelan asli dari sampel."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Gain:             %{val}"
   fmt_poly:        "Polifoni:         %{val}"
   fmt_buffer:      "Buffer Audio:     %{val} frame"
-  fmt_preload:     "Preload:          %{val} frame"
+  fmt_preload:     "RAM Sampel Maks:  %{val} GB"
   fmt_precache:    "Pre-cache:        %{val}"
   fmt_convert:     "Konv. 16-bit:     %{val}"
   fmt_tuning:      "Penyetelan Asli:  %{val}"
