--- a/locales/it.yaml
+++ b/locales/it.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Guadagno:"
   group_polyphony: "Polifonia:"
   group_buffer: "Buffer Audio (frame):"
-  group_preload: "Precaricamento (frame):"
+  group_preload: "RAM max per campioni (GB):"
   group_options: "Opzioni:"
   
   tooltip_organ: "Seleziona il file organo Hauptwerk (.organ o Organ_Hauptwerk_xml) da caricare."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Volume generale di uscita."
   tooltip_polyphony: "Numero massimo di voci simultanee."
   tooltip_buffer: "Numero di frame audio per buffer. Valori più alti riducono i glitch ma aumentano la latenza."
-  tooltip_preload: "I primi frame di ogni campione saranno precaricati nella RAM."
+  tooltip_preload: "RAM massima per il pre-caricamento dei campioni (in GB). Valori più alti danno al disco più tempo per lo streaming dei dati rimanenti, ma usano anche più RAM. Aumenta questo valore se hai un SSD più lento."
   tooltip_precache: "Abilita per caricare completamente tutti i campioni nella RAM."
   tooltip_convert: "Abilita per convertire tutti i campioni a 16-bit (risparmio RAM)."
   tooltip_tuning: "Usa l'accordatura originale dei campioni."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Guadagno:         %{val}"
   fmt_poly:        "Polifonia:        %{val}"
   fmt_buffer:      "Buffer Audio:     %{val} frame"
-  fmt_preload:     "Precaricamento:   %{val} frame"
+  fmt_preload:     "RAM max campioni: %{val} GB"
   fmt_precache:    "Pre-cache:        %{val}"
   fmt_convert:     "Conv. 16-bit:     %{val}"
   fmt_tuning:      "Accordo Orig.:    %{val}"
