--- a/locales/ja.yaml
+++ b/locales/ja.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "ゲイン:"
   group_polyphony: "同時発音数:"
   group_buffer: "オーディオバッファ (frames):"
-  group_preload: "プリロード (frames):"
+  group_preload: "サンプル用最大RAM (GB):"
   group_options: "オプション:"
   
   tooltip_organ: "読み込むHauptwerkオルガンファイル (.organ または Organ_Hauptwerk_xml) を選択してください。"
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "全体的な出力音量。"
   tooltip_polyphony: "同時に発音できる最大音数。"
   tooltip_buffer: "バッファごとのオーディオフレーム数。高い値はノイズを減らしますが、レイテンシーが増加します。"
-  tooltip_preload: "各サンプルの最初の数フレームをRAMにプリロードします。"
+  tooltip_preload: "サンプルのプリロードに使用する最大RAM (GB単位)。値を高くすると、ディスクが残りのサンプルデータをストリーミングする余裕ができますが、RAMの使用量も増えます。SSDが遅い場合はこの値を増やしてください。"
   tooltip_precache: "これを有効にすると、すべてのサンプルをディスクからストリーミングする代わりにRAMに完全に読み込みます。"
   tooltip_convert: "これを有効にすると、すべてのサンプルを16ビットに変換してRAM使用量を削減します。"
   tooltip_tuning: "サンプルの元のチューニングを使用します。"
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "ゲイン:           %{val}"
   fmt_poly:        "同時発音数:       %{val}"
   fmt_buffer:      "音声バッファ:     %{val} frames"
-  fmt_preload:     "プリロード:       %{val} frames"
+  fmt_preload:     "最大サンプルRAM:  %{val} GB"
   fmt_precache:    "プリキャッシュ:   %{val}"
   fmt_convert:     "16bit変換:        %{val}"
   fmt_tuning:      "元の調律:         %{val}"
