--- a/locales/ko.yaml
+++ b/locales/ko.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "게인 (Gain):"
   group_polyphony: "동시 발음수:"
   group_buffer: "오디오 버퍼 (프레임):"
-  group_preload: "프리로드 (프레임):"
+  group_preload: "샘플용 최대 RAM (GB):"
   group_options: "옵션:"
   
   tooltip_organ: "로드할 Hauptwerk 오르간 파일(.organ 또는 Organ_Hauptwerk_xml)을 선택하세요."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "전체 출력 볼륨입니다."
   tooltip_polyphony: "동시에 낼 수 있는 최대 소리의 수입니다."
   tooltip_buffer: "버퍼당 오디오 프레임 수입니다. 값이 높으면 끊김은 줄지만 레이턴시가 증가합니다."
-  tooltip_preload: "각 샘플의 초기 프레임을 RAM에 미리 로드합니다."
+  tooltip_preload: "샘플 프리로딩에 사용할 최대 RAM(GB). 값이 높으면 디스크가 나머지 샘플 데이터를 스트리밍할 시간이 더 많아지지만, RAM도 더 많이 사용합니다. SSD가 느린 경우 이 값을 늘리십시오."
   tooltip_precache: "이 옵션을 켜면 디스크 스트리밍 대신 모든 샘플을 RAM에 완전히 로드합니다."
   tooltip_convert: "RAM 사용량을 줄이기 위해 모든 샘플을 16비트로 변환합니다."
   tooltip_tuning: "샘플의 원래 튜닝을 사용합니다."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "게인:             %{val}"
   fmt_poly:        "동시 발음수:      %{val}"
   fmt_buffer:      "오디오 버퍼:      %{val} 프레임"
-  fmt_preload:     "프리로드:         %{val} 프레임"
+  fmt_preload:     "최대 샘플 RAM:    %{val} GB"
   fmt_precache:    "프리캐시:         %{val}"
   fmt_convert:     "16비트 변환:      %{val}"
   fmt_tuning:      "원래 튜닝:        %{val}"
