--- a/locales/la.yaml
+++ b/locales/la.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Lucrum:"
   group_polyphony: "Polyphonia:"
   group_buffer: "Buffer Auditionis (framea):"
-  group_preload: "Prae-onerare (framea):"
+  group_preload: "RAM Maxima Exemplis (GB):"
   group_options: "Optiones:"
   
   tooltip_organ: "Selige plicam organi Hauptwerk (.organ vel Organ_Hauptwerk_xml) onerandam."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Volumen output totum."
   tooltip_polyphony: "Numerus maximus vocum simul sonantium."
   tooltip_buffer: "Numerus frameorum auditionis per buffer. Altiores valores singultus minuunt sed latentiam augent."
-  tooltip_preload: "Prima framea cuiusque exempli in RAM prae-onerabuntur."
+  tooltip_preload: "RAM maxima ad exempla praeponenda (in GB). Pretia altiora disco tuo plus temporis dant ad cetera data exemplorum fluenda, sed hoc etiam plus RAM utitur. Auge hoc pretium si SSD tardiorem habes."
   tooltip_precache: "Habilita hoc ad omnia exempla plene in RAM oneranda, non de disco fluminea."
   tooltip_convert: "Habilita hoc ad omnia exempla in 16-bit convertenda (parcimonia RAM)."
   tooltip_tuning: "Utere temperatura originali exemplorum."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Lucrum:           %{val}"
   fmt_poly:        "Polyphonia:       %{val}"
   fmt_buffer:      "Buffer Audit:     %{val} framea"
-  fmt_preload:     "Prae-oneratio:    %{val} framea"
+  fmt_preload:     "RAM Max. Exemplis:%{val} GB"
   fmt_precache:    "Prae-cache:       %{val}"
   fmt_convert:     "Conv. ad 16-bit:  %{val}"
   fmt_tuning:      "Temp. Originalis: %{val}"
