--- a/locales/nb.yaml
+++ b/locales/nb.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Gain:"
   group_polyphony: "Polyfoni:"
   group_buffer: "Lydbuffer (frames):"
-  group_preload: "Forhåndslasting (frames):"
+  group_preload: "Maks RAM for samplinger (GB):"
   group_options: "Alternativer:"
   
   tooltip_organ: "Velg Hauptwerk-orgelfilen (.organ eller Organ_Hauptwerk_xml) som skal lastes."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Overordnet utgangsvolum."
   tooltip_polyphony: "Maksimalt antall samtidige stemmer."
   tooltip_buffer: "Antall lydrammer per buffer. Høyere verdier reduserer hakking men øker forsinkelsen."
-  tooltip_preload: "De første rammene av hver sample forhåndslastes i RAM."
+  tooltip_preload: "Maksimal RAM for forhåndslasting av samplinger (i GB). Høyere verdier gir disken mer tid til å strømme de resterende dataene, men dette bruker også mer RAM. Øk denne verdien hvis du har en tregere SSD."
   tooltip_precache: "Aktiver dette for å laste alle samples helt inn i RAM i stedet for å strømme fra disk."
   tooltip_convert: "Aktiver dette for å konvertere alle samples til 16-bit."
   tooltip_tuning: "Bruk original stemming fra samples."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Gain:             %{val}"
   fmt_poly:        "Polyfoni:         %{val}"
   fmt_buffer:      "Lydbuffer:        %{val} frames"
-  fmt_preload:     "Forhåndslasting:  %{val} frames"
+  fmt_preload:     "Maks sample-RAM:  %{val} GB"
   fmt_precache:    "Pre-cache:        %{val}"
   fmt_convert:     "Konv. til 16-bit: %{val}"
   fmt_tuning:      "Orig. Stemming:   %{val}"
