--- a/locales/pl.yaml
+++ b/locales/pl.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Wzmocnienie (Gain):"
   group_polyphony: "Polifonia:"
   group_buffer: "Bufor Audio (ramki):"
-  group_preload: "Wstępne ładowanie (ramki):"
+  group_preload: "Maks. RAM dla próbek (GB):"
   group_options: "Opcje:"
   
   tooltip_organ: "Wybierz plik organów Hauptwerk (.organ lub Organ_Hauptwerk_xml) do wczytania."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Ogólna głośność wyjściowa."
   tooltip_polyphony: "Maksymalna liczba jednoczesnych głosów."
   tooltip_buffer: "Liczba ramek audio na bufor. Większe wartości redukują zakłócenia, ale zwiększają opóźnienie."
-  tooltip_preload: "Pierwsze ramki każdej próbki będą wstępnie ładowane do pamięci RAM."
+  tooltip_preload: "Maksymalna ilość RAM do wstępnego ładowania próbek (w GB). Wyższe wartości dają dyskowi więcej czasu na strumieniowanie pozostałych danych, ale zużywają też więcej pamięci RAM. Zwiększ tę wartość, jeśli masz wolniejszy dysk SSD."
   tooltip_precache: "Włącz, aby całkowicie załadować wszystkie próbki do RAM zamiast strumieniowania z dysku."
   tooltip_convert: "Włącz, aby przekonwertować wszystkie próbki na 16-bit (oszczędność RAM)."
   tooltip_tuning: "Użyj oryginalnego strojenia próbek."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Wzmocnienie:      %{val}"
   fmt_poly:        "Polifonia:        %{val}"
   fmt_buffer:      "Bufor Audio:      %{val} ramek"
-  fmt_preload:     "Pre-load:         %{val} ramek"
+  fmt_preload:     "Maks. RAM próbek: %{val} GB"
   fmt_precache:    "Pre-cache RAM:    %{val}"
   fmt_convert:     "Konw. 16-bit:     %{val}"
   fmt_tuning:      "Oryg. Strojenie:  %{val}"
