--- a/locales/pt.yaml
+++ b/locales/pt.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Ganho:"
   group_polyphony: "Polifonia:"
   group_buffer: "Buffer de Áudio (frames):"
-  group_preload: "Frames de Pré-carregamento:"
+  group_preload: "RAM Máx. para Amostras (GB):"
   group_options: "Opções:"
   
   tooltip_organ: "Selecione o arquivo de órgão Hauptwerk (.organ ou Organ_Hauptwerk_xml) para carregar."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Volume geral de saída."
   tooltip_polyphony: "Número máximo de vozes simultâneas."
   tooltip_buffer: "Número de frames de áudio por buffer. Valores altos reduzem falhas, mas aumentam a latência."
-  tooltip_preload: "Frames iniciais de cada amostra pré-carregados na RAM. Aumente se tiver um SSD lento."
+  tooltip_preload: "RAM máxima para pré-carregar amostras (em GB). Valores mais altos dão ao disco mais tempo para transmitir os dados restantes, mas isso também usa mais RAM. Aumente este valor se tiver um SSD mais lento."
   tooltip_precache: "Habilite para carregar completamente todas as amostras na RAM."
   tooltip_convert: "Habilite para converter todas as amostras para 16-bit."
   tooltip_tuning: "Use a afinação original das amostras."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Ganho:            %{val}"
   fmt_poly:        "Polifonia:        %{val}"
   fmt_buffer:      "Buffer Áudio:     %{val} frames"
-  fmt_preload:     "Pré-carregamento: %{val} frames"
+  fmt_preload:     "RAM Máx. Amostras:%{val} GB"
   fmt_precache:    "Pré-cache:        %{val}"
   fmt_convert:     "Conv. 16-bit:     %{val}"
   fmt_tuning:      "Afinação Orig.:   %{val}"
