--- a/locales/ro.yaml
+++ b/locales/ro.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Câștig (Gain):"
   group_polyphony: "Polifonie:"
   group_buffer: "Buffer Audio (cadre):"
-  group_preload: "Preîncărcare (cadre):"
+  group_preload: "RAM max. pentru eșantioane (GB):"
   group_options: "Opțiuni:"
   
   tooltip_organ: "Selectați fișierul de orgă Hauptwerk (.organ sau Organ_Hauptwerk_xml) de încărcat."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Volumul general de ieșire."
   tooltip_polyphony: "Numărul maxim de voci simultane."
   tooltip_buffer: "Numărul de cadre audio per buffer. Valori mai mari reduc întreruperile, dar cresc latența."
-  tooltip_preload: "Primele câteva cadre ale fiecărui eșantion vor fi preîncărcate în RAM."
+  tooltip_preload: "Memoria RAM maximă pentru preîncărcarea eșantioanelor (în GB). Valorile mai mari oferă discului mai mult timp pentru a reda restul datelor, dar consumă și mai multă RAM. Creșteți această valoare dacă aveți un SSD mai lent."
   tooltip_precache: "Activați pentru a încărca complet toate eșantioanele în RAM în loc de a le reda de pe disc."
   tooltip_convert: "Activați pentru a converti toate eșantioanele la 16 biți (economie de RAM)."
   tooltip_tuning: "Utilizează acordajul original al eșantioanelor."
@@ -192,20 +192,20 @@ tui_config:
   prompt_preload: "Introduceți Cadre Preîncărcare"
   prompt_generic: "Introduceți Valoare"
 
-  fmt_organ:       "Fișier Orgă:      %{val}"
-  fmt_audio:       "Disp. Audio:      %{val}"
-  fmt_rate:        "Rată Eșant.:      %{val} Hz"
-  fmt_midi_devs:   "Intrări MIDI:     %{count} activate"
-  fmt_midi_file:   "Fișier MIDI:      %{val}"
-  fmt_ir:          "Fișier IR Reverb: %{val}"
-  fmt_mix:         "Mix Reverb:       %{val}"
-  fmt_gain:        "Câștig:           %{val}"
-  fmt_poly:        "Polifonie:        %{val}"
-  fmt_buffer:      "Buffer Audio:     %{val} cadre"
-  fmt_preload:     "Preîncărcare:     %{val} cadre"
-  fmt_precache:    "Pre-cache:        %{val}"
-  fmt_convert:     "Conv. 16-bit:     %{val}"
-  fmt_tuning:      "Acordaj Orig.:    %{val}"
+  fmt_organ:       "Fișier Orgă:        %{val}"
+  fmt_audio:       "Disp. Audio:        %{val}"
+  fmt_rate:        "Rată Eșant.:        %{val} Hz"
+  fmt_midi_devs:   "Intrări MIDI:       %{count} activate"
+  fmt_midi_file:   "Fișier MIDI:        %{val}"
+  fmt_ir:          "Fișier IR Reverb:   %{val}"
+  fmt_mix:         "Mix Reverb:         %{val}"
+  fmt_gain:        "Câștig:             %{val}"
+  fmt_poly:        "Polifonie:          %{val}"
+  fmt_buffer:      "Buffer Audio:       %{val} cadre"
+  fmt_preload:     "RAM max. eșantioane:%{val} GB"
+  fmt_precache:    "Pre-cache:          %{val}"
+  fmt_convert:     "Conv. 16-bit:       %{val}"
+  fmt_tuning:      "Acordaj Orig.:      %{val}"
   
   val_on: "PORNIT"
   val_off: "OPRIT"
