--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Усиление:"
   group_polyphony: "Полифония:"
   group_buffer: "Аудиобуфер (фреймы):"
-  group_preload: "Предзагрузка (фреймы):"
+  group_preload: "Макс. ОЗУ для семплов (ГБ):"
   group_options: "Опции:"
   
   tooltip_organ: "Выберите файл органа Hauptwerk (.organ или Organ_Hauptwerk_xml) для загрузки."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Общая громкость выхода."
   tooltip_polyphony: "Максимальное число одновременных голосов."
   tooltip_buffer: "Размер буфера. Больше = меньше сбоев, но больше задержка."
-  tooltip_preload: "Первые кадры каждого семпла будут предзагружены в RAM."
+  tooltip_preload: "Максимальный объем ОЗУ для предзагрузки семплов (в ГБ). Более высокие значения дают диску больше времени на потоковую передачу данных, но это также использует больше ОЗУ. Увеличьте это значение, если у вас медленный SSD."
   tooltip_precache: "Включите, чтобы полностью загрузить все семплы в RAM."
   tooltip_convert: "Включите для конвертации всех семплов в 16-бит (экономия RAM)."
   tooltip_tuning: "Использовать оригинальный строй семплов."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Усиление:         %{val}"
   fmt_poly:        "Полифония:        %{val}"
   fmt_buffer:      "Аудиобуфер:       %{val} фр."
-  fmt_preload:     "Предзагрузка:     %{val} фр."
+  fmt_preload:     "Макс. ОЗУ семплов:%{val} ГБ"
   fmt_precache:    "Кэширование RAM:  %{val}"
   fmt_convert:     "Конв. в 16-бит:   %{val}"
   fmt_tuning:      "Ориг. строй:      %{val}"
