--- a/locales/sv.yaml
+++ b/locales/sv.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Gain:"
   group_polyphony: "Polyfoni:"
   group_buffer: "Ljudbuffert (frames):"
-  group_preload: "Förladdning (frames):"
+  group_preload: "Max RAM för samplingar (GB):"
   group_options: "Alternativ:"
   
   tooltip_organ: "Välj Hauptwerk-orgelfilen (.organ eller Organ_Hauptwerk_xml) att ladda."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Övergripande utgångsvolym."
   tooltip_polyphony: "Maximalt antal samtidiga röster."
   tooltip_buffer: "Antal ljudramar per buffert. Högre värden minskar risk för störningar men ökar latensen."
-  tooltip_preload: "De första ramarna av varje sampling förladdas i RAM."
+  tooltip_preload: "Maximalt RAM för att förhandsladda samplingar (i GB). Högre värden ger disken mer tid att strömma återstående data, men detta använder också mer RAM. Öka detta värde om du har en långsammare SSD."
   tooltip_precache: "Aktivera detta för att ladda alla samplingar helt i RAM istället för att strömma från disk."
   tooltip_convert: "Aktivera detta för att konvertera alla samplingar till 16-bitars djup."
   tooltip_tuning: "Använd samplingarnas originalstämning."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Gain:             %{val}"
   fmt_poly:        "Polyfoni:         %{val}"
   fmt_buffer:      "Ljudbuffert:      %{val} frames"
-  fmt_preload:     "Förladdning:      %{val} frames"
+  fmt_preload:     "Max sample-RAM:   %{val} GB"
   fmt_precache:    "För-cacha:        %{val}"
   fmt_convert:     "Konv. till 16-bit:%{val}"
   fmt_tuning:      "Orig. Stämning:   %{val}"
