--- a/locales/tlh.yaml
+++ b/locales/tlh.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "HoS:"
   group_polyphony: "rogh:"
   group_buffer: "Buffer (frames):"
-  group_preload: "Preload (frames):"
+  group_preload: "wabmeyvaD DeS 'a' (GB):"
   group_options: "DuH:"
   
   tooltip_organ: "Hauptwerk 'o'rghan teywI' yIwIv."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "HoS'a'."
   tooltip_polyphony: "rogh mI' 'a'."
   tooltip_buffer: "Buffer wa'."
-  tooltip_preload: "RAM lI'."
+  tooltip_preload: "wabmey nI'be' lu'meH DeS 'a' (GB). tInchugh mI'vam, 'epIl naQ Data'e' ngeD, 'ach DeS lo'bej. nombe'chugh SSD, mI'vam yItInmoH."
   tooltip_precache: "RAMDaq lI' Hoch."
   tooltip_convert: "16-bit choH."
   tooltip_tuning: "'o'rghan prm."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "HoS:             %{val}"
   fmt_poly:        "rogh:            %{val}"
   fmt_buffer:      "Buffer:          %{val} frames"
-  fmt_preload:     "Preload:         %{val} frames"
+  fmt_preload:     "wabmey DeS 'a':  %{val} GB"
   fmt_precache:    "RAM lI':         %{val}"
   fmt_convert:     "16-bit choH:     %{val}"
   fmt_tuning:      "prm lo':         %{val}"
