--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Підсилення:"
   group_polyphony: "Поліфонія:"
   group_buffer: "Аудіобуфер (фрейми):"
-  group_preload: "Попереднє завантаження (фрейми):"
+  group_preload: "Макс. ОЗП для семплів (ГБ):"
   group_options: "Опції:"
   
   tooltip_organ: "Виберіть файл органу Hauptwerk (.organ або Organ_Hauptwerk_xml) для завантаження."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Загальна гучність виходу."
   tooltip_polyphony: "Максимальна кількість одночасних голосів."
   tooltip_buffer: "Кількість аудіофреймів на буфер. Більші значення зменшують збої, але збільшують затримку."
-  tooltip_preload: "Перші кадри кожного семплу будуть попередньо завантажені в RAM."
+  tooltip_preload: "Максимальний обсяг ОЗП для попереднього завантаження семплів (у ГБ). Вищі значення дають диску більше часу на потокову передачу решти даних, але це також використовує більше ОЗП. Збільште це значення, якщо у вас повільніший SSD."
   tooltip_precache: "Увімкніть, щоб повністю завантажити всі семпли в RAM замість потокового читання з диска."
   tooltip_convert: "Увімкніть для конвертації всіх семплів у 16-біт (економія RAM)."
   tooltip_tuning: "Використовувати оригінальне налаштування семплів."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Підсилення:       %{val}"
   fmt_poly:        "Поліфонія:        %{val}"
   fmt_buffer:      "Аудіобуфер:       %{val} фр."
-  fmt_preload:     "Попереднє завант: %{val} фр."
+  fmt_preload:     "Макс. ОЗП семплів:%{val} ГБ"
   fmt_precache:    "Кешування RAM:    %{val}"
   fmt_convert:     "Конв. в 16-біт:   %{val}"
   fmt_tuning:      "Ориг. стрій:      %{val}"
