--- a/locales/zh-CN.yaml
+++ b/locales/zh-CN.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "增益:"
   group_polyphony: "复音数:"
   group_buffer: "音频缓冲区 (帧):"
-  group_preload: "预加载 (帧):"
+  group_preload: "采样最大内存 (GB):"
   group_options: "选项:"
   
   tooltip_organ: "选择要加载的 Hauptwerk 管风琴文件 (.organ 或 Organ_Hauptwerk_xml)。"
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "总输出音量。"
   tooltip_polyphony: "最大同时发音数。"
   tooltip_buffer: "每个缓冲区的音频帧数。数值越高可减少卡顿，但会增加延迟。"
-  tooltip_preload: "每个采样的前几帧将预加载到内存中。"
+  tooltip_preload: "用于预加载采样的最大内存（以 GB 为单位）。较高的值可以让磁盘有更多时间流式传输剩余的采样数据，但这也会占用更多内存。如果您使用较慢的 SSD，请增加此值。"
   tooltip_precache: "启用此选项可将所有采样完全加载到内存中，而不是从磁盘流式传输。"
   tooltip_convert: "启用此选项可将所有采样转换为 16 位，以节省内存。"
   tooltip_tuning: "使用采样的原始音准/调律。"
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "增益:             %{val}"
   fmt_poly:        "复音数:           %{val}"
   fmt_buffer:      "音频缓冲区:       %{val} 帧"
-  fmt_preload:     "预加载:           %{val} 帧"
+  fmt_preload:     "最大采样内存:      %{val} GB"
   fmt_precache:    "预缓存:           %{val}"
   fmt_convert:     "转换为 16 位:     %{val}"
   fmt_tuning:      "原始音准:         %{val}"
