--- a/locales/zh-TW.yaml
+++ b/locales/zh-TW.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "增益:"
   group_polyphony: "複音數:"
   group_buffer: "音訊緩衝區 (幀):"
-  group_preload: "預載 (幀):"
+  group_preload: "取樣最大記憶體 (GB):"
   group_options: "選項:"
   
   tooltip_organ: "選擇要載入的 Hauptwerk 管風琴檔案 (.organ 或 Organ_Hauptwerk_xml)。"
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "總輸出音量。"
   tooltip_polyphony: "最大同時發音數。"
   tooltip_buffer: "每個緩衝區的音訊幀數。數值越高可減少卡頓，但會增加延遲。"
-  tooltip_preload: "每個採樣的前幾幀將預載到記憶體中。"
+  tooltip_preload: "用於預先載入取樣的最大記憶體（以 GB 為單位）。較高的值可以讓磁碟有更多時間串流傳輸剩餘的取樣資料，但這也會佔用更多記憶體。若您使用較慢的 SSD，請增加此值。"
   tooltip_precache: "啟用此選項可將所有採樣完全載入到記憶體中，而不是從硬碟串流傳輸。"
   tooltip_convert: "啟用此選項可將所有採樣轉換為 16 位元，以節省記憶體。"
   tooltip_tuning: "使用採樣的原始音準/調律。"
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "增益:             %{val}"
   fmt_poly:        "複音數:           %{val}"
   fmt_buffer:      "音訊緩衝區:       %{val} 幀"
-  fmt_preload:     "預載:             %{val} 幀"
+  fmt_preload:     "最大取樣記憶體:    %{val} GB"
   fmt_precache:    "預快取:           %{val}"
   fmt_convert:     "轉換為 16 位元:   %{val}"
   fmt_tuning:      "原始音準:         %{val}"
