--- a/locales/nl.yaml
+++ b/locales/nl.yaml
@@ -131,7 +131,7 @@ config:
   group_gain: "Versterking:"
   group_polyphony: "Polyfonie:"
   group_buffer: "Audiobuffer (frames):"
-  group_preload: "Voorlaad Frames:"
+  group_preload: "Max. RAM voor samples (GB):"
   group_options: "Opties:"
   
   tooltip_organ: "Selecteer het Hauptwerk-orgelbestand (.organ of Organ_Hauptwerk_xml) om te laden."
@@ -145,7 +145,7 @@ config:
   tooltip_gain: "Algemeen uitgangsvolume."
   tooltip_polyphony: "Maximum aantal gelijktijdige stemmen."
   tooltip_buffer: "Aantal audioframes per buffer. Hogere waarden verminderen haperingen maar verhogen de latentie."
-  tooltip_preload: "De eerste frames van elke sample worden vooraf in het RAM geladen."
+  tooltip_preload: "Maximaal RAM-geheugen voor het voorladen van samples (in GB). Hogere waarden geven uw schijf meer tijd om de resterende samplegegevens te streamen, maar dit verbruikt ook meer RAM. Verhoog deze waarde als u een tragere SSD hebt."
   tooltip_precache: "Schakel dit in om alle samples volledig in het RAM te laden."
   tooltip_convert: "Schakel dit in om alle samples naar 16-bits te converteren."
   tooltip_tuning: "Gebruik de originele stemming van de samples."
@@ -202,7 +202,7 @@ tui_config:
   fmt_gain:        "Versterking:      %{val}"
   fmt_poly:        "Polyfonie:        %{val}"
   fmt_buffer:      "Audiobuffer:      %{val} frames"
-  fmt_preload:     "Voorlaad Frames:  %{val} frames"
+  fmt_preload:     "Max. sample-RAM:  %{val} GB"
   fmt_precache:    "Vooraf cachen:    %{val}"
   fmt_convert:     "Conv. naar 16-bit:%{val}"
   fmt_tuning:      "Orig. Stemming:   %{val}"
